# quro

./: .gitignore  .quroignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  __main__.py  build_index.py  okf.yaml  pyproject.toml  requirements.txt  setup.py
adapters/graph/: __init__.py  duckdb.py  protocol.py  sqlite.py  types.py
adapters/manifold/: __init__.py  postgres.py  protocol.py  types.py
adapters/registry/: __init__.py  postgres.py  protocol.py  types.py
adapters/shadows/: __init__.py  filesystem.py  protocol.py  types.py
adapters/skeleton/: __init__.py  jsonl.py  protocol.py  types.py
cli/: __init__.py  base.py  coverage.py  main.py  registry.py
cli/commands/: __init__.py  _common.py  centers.py  cqe.py  docs.py  scanner.py  tda.py  tda_pipeline.py  visualize.py
core/: README.md  __init__.py
core/cqe/: __init__.py  canonical.py  field_guided_traverser.py  field_scorer.py  (+14 more)
deprecated/: populate_tda_energy_fields.py
docs/: __init__.py  index.md  log.md
index_builder/: __init__.py  orchestrator.py  types.py
io/: __init__.py
migrations/: 001_add_tda_columns.py  __init__.py  add_semantic_metadata.sql
orchestrators/: __init__.py  cqe.py  lsh.py  morph.py  phantom.py  skeleton.py
pipeline/: __init__.py
protocols/: __init__.py  extension.py  kernel.py  policy.py
quro_mcp/: __init__.py  __main__.py  server.py  service.py  tda_enricher.py  type_aware_navigation.py
runtime/: __init__.py  orchestrator.py
scanner/: __init__.py  ignore_parser.py  orchestrator.py  types.py
service/: __init__.py  base.py  cqe_service.py  registry.py  scanner_service.py  tda_service.py  visualization_service.py
storage/: __init__.py  coordinator.py  migration.py  schema.py
tda/: __init__.py  __main__.py  flow_observer.py  mi_warmup.py
(+348 files in other folders)
